[package]
name = "ampmeter-rs-ui"
version = "0.1.0"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
lv2-sys = "1.1.0"
lv2-core = "2.0.0"
lv2-atom = "1.1.0"
lv2-urid = "2.0.0"
lv2-units = "0.1.2"
urid = "0.1.0"

cairo-rs = "0.8.1"
pango = "0.8.0"
pangocairo = "0.9.0"

pugl-ui = { git = "https://github.com/johannes-mueller/pugl-ui" }
pugl-sys = { git = "https://github.com/johannes-mueller/pugl-sys" }
lv2-ui = { git = "https://github.com/johannes-mueller/lv2-ui" }
